# spaceship

./: .gitignore  Readme.md  imgui.ini  meson.build  meson_options.txt  renderdoc.cap
include/: animation.h  camera2d.h  collider.h  imconfig.h  imgui_impl_opengl3.h  input.h  logs.h  main.h  mesh2d.h  object.h  object2d.h  render.h  rigidbody.h  rigidbody2d.h  shader.h  sprite.h  texture.h  utility.h  window.h
include/editor/: gridEditor.h  meshEditor.h
include/game/: cloader.h  ship.h  tileGrid.h
include/glad/: glad.h
src/: camera2d.cpp  collider.cpp  glad.c  input.cpp  main.cpp  mesh2d.cpp  meson.build  object.cpp  object2d.cpp  render.cpp  rigidbody2d.cpp  shader.cpp  sprite.cpp  texture.cpp  utility.cpp  window.cpp
src/editor/: gridEditor.cpp  meson.build
src/game/: cloader.cpp  meson.build  ship.cpp  tileGrid.cpp
src/imgui/: meson.build
src/protocol/: meson.build  object.proto  tileGrid.proto
subprojects/: imgui.wrap  protobuf.wrap
tests/: grid.mp  gridtest.mp
tests/shader/: bg.vs  sprite.fs  sprite.vs  tile.vs
tests/textures/: anim template.kra  anim template.kra~  colorgrid.kra  colorgrid.kra~  demo.kra  demo.kra~  demo.png~  sattelite.kra  sattelite.kra~  shiptest.kra  tilemap template.kra  tilemap template.kra~
