src = files(
	'glad.c',
	'main.cpp',
	'window.cpp',
	'input.cpp',
	'shader.cpp',
	'utility.cpp',
	'object.cpp',
	'object2d.cpp',
	'mesh2d.cpp',
	'sprite.cpp',
	'camera2d.cpp',
	'texture.cpp',
	'imgui_impl_glfw.cpp',
	'imgui_impl_opengl3.cpp',
	'imgui_demo.cpp', 'imgui_draw.cpp', 'imgui_widgets.cpp', 'imgui.cpp', 'imgui_stdlib.cpp'
)

subdir('game')
subdir('editor')
subdir('protocol')